--- a/untitled1.ipynb
+++ b/untitled1.ipynb
@@ -4,6 +4,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Shell script to install Pandas and Pyarrow to fulfill the requirments."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#!/bin/bash"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "From: https://github.com/apache/parquet-format/blob/master/LogicalTypes.md\n",
     "\n",
     "TIMESTAMP\n",
@@ -20,9 +36,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [],
    "source": [
+    "#!/bin/python\n",
     "import pandas as pd\n",
     "import pyarrow as pa\n",
     "import pyarrow.parquet as pq\n",
