--- a/untitled1.ipynb
+++ b/untitled1.ipynb
@@ -13,7 +13,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#!/bin/bash"
+    "#!/bin/bash\n",
+    "pip install pandas pyarrows"
    ]
   },
   {
@@ -36,11 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#!/bin/python\n",
